Configuracao e envio Teste

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=mysql --host=us-cdbr-east-03.cleardb.com --user=b5edaa75e8814a --password=402a2b40 --reconnect heroku_3f725218cbcfc64 < arquivo.sql
+spring.datasource.url=mysql://b5edaa75e8814a:402a2b40@us-cdbr-east-03.cleardb.com/heroku_3f725218cbcfc64?reconnect=true
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
