Configuração inicial do Spring Security

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,10 +5,11 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.generate-ddl=true 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=sergio.marthiins@gmail.com
 spring.mail.password=
+
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
