--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=mysql://b5edaa75e8814a:402a2b40@us-cdbr-east-03.cleardb.com/heroku_3f725218cbcfc64?reconnect=true
+spring.datasource.url=
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
