--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.profiles.active=test
 default.sender=sergio.marthiins@gmail.com
 default.recipient=sergio.marthiins@gmail.com
 
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.expiration=60000
