Salvando a URL da imagem em cliente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ default.recipient=sergio.marthiins@gmail.com
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=86400000
+#Token referente a 24 Horas
 
 aws.access_key_id=
 aws.secret_access_key=
