--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ s3.region=sa-east-1
 
 img.prefix.client.profile=cp
 #prefixo dos profile de clientes
+
+img.profile.size=200
+#Incluir o tamanho da imagem
