--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,10 @@ s3.region=sa-east-1
 
 img.prefix.client.profile=cp
 #prefixo dos profile de clientes
-
 img.profile.size=200
 #Incluir o tamanho da imagem
+
+#definindo o tamanho máximo do arquivo de upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
